force-app/main/default/objects/EngagementTeamMember__c/EngagementTeamMember__c.object-meta.xml
<CustomObject>
    <description>A user assigned to an engagement team in a delivery role. Basis for Apex-managed sharing of the engagement.</description>
    <label>Engagement Team Member</label>
    <nameField>
        <displayFormat>ETM-{0000000}</displayFormat>
        <label>Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Team Members</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>