force-app/main/default/objects/EngagementTeamMember__c/fields/Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percent__c</fullName>
    <description>Percentage of the member&apos;s capacity allocated to this engagement.</description>
    <label>Allocation Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>