force-app/main/default/objects/EngagementTeamMember__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Engagement this team member belongs to.</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>