force-app/main/default/objects/EngagementTeamMember__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Delivery role on the engagement.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engagement Manager</fullName>
            </value>
            <value>
                <fullName>Lead Consultant</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
                <default>true</default>
                <label>Consultant</label>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>