force-app/main/default/objects/EngagementTeamMember__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member (Salesforce user).</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Engagement Memberships</relationshipLabel>
    <relationshipName>Engagement_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>